[gd_scene load_steps=3 format=3 uid="uid://cyog4pqy5jrf1"]

[ext_resource type="Script" path="res://scripts/debug_menu.gd" id="1_6k2b7"]
[ext_resource type="Script" path="res://addons/onscreenkeyboard/onscreen_keyboard.gd" id="2_wscmj"]

[node name="debug_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6k2b7")

[node name="VolumeUp" type="Button" parent="."]
layout_mode = 0
offset_right = 267.0
offset_bottom = 187.0
text = "Volume +"

[node name="VolumeDown" type="Button" parent="."]
layout_mode = 0
offset_left = 270.0
offset_top = 3.0
offset_right = 537.0
offset_bottom = 190.0
text = "Volume -"

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 662.0
offset_top = 45.0
offset_right = 1030.0
offset_bottom = 134.0

[node name="OnscreenKeyboard" type="PanelContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -296.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("2_wscmj")

[node name="SystemInfo" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 10.0
offset_top = 298.0
offset_right = 840.0
offset_bottom = 586.0

[connection signal="pressed" from="VolumeUp" to="." method="_on_volume_up_pressed"]
[connection signal="pressed" from="VolumeDown" to="." method="_on_volume_down_pressed"]
